--- a/app/index.html
+++ b/app/index.html
@@ -15,10 +15,15 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div id="container">
-            <h1 id="title">US Educational Attainment</h1>
-            <p id="description">Percentage of adults age 25+ with a Bachelor's degree or higher (2010-2014)</p>
+        <div id="main">
+            <div id="header">
+                <h1 id="title">US Educational Attainment</h1>
+                <p id="description">Percentage of adults age 25+ with a Bachelor's degree or higher (2010-2014)</p>
+            </div>
+            <div id="container" class="map"></div>
+            <div id="legend" class="map"></div>
         </div>
+        
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/3.0.2/topojson.min.js"></script>
